handover/evidence/dev_self_hosting/dev_1778811250681_913405/artifacts/command_0047_stderr.txt
   Compiling turingosv4 v0.1.0 (/home/zephryj/projects/turingosv4)
warning: unused import: `ObjectType as Git2ObjectType`
  --> src/bottom_white/cas/store.rs:26:12
   |
26 | use git2::{ObjectType as Git2ObjectType, Repository};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ObjectType as Git2ObjectType`
  --> src/bottom_white/ledger/transition_ledger.rs:36:12
   |
36 | use git2::{ObjectType as Git2ObjectType, Repository, Signature as GitSignature};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `KernelError`
 --> src/bus.rs:8:29
  |
8 | use crate::kernel::{Kernel, KernelError};
  |                             ^^^^^^^^^^^

warning: unused import: `TapeError`
 --> src/bus.rs:9:54
  |
9 | use crate::ledger::{EventType, Ledger, Node, NodeId, TapeError};
  |                                                      ^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
  --> src/bus.rs:13:13
   |
13 | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^  ^^^^^^^^^

warning: unused imports: `MICRO_PER_COIN` and `MicroCoin`
  --> src/economy/monetary_invariant.rs:26:29
   |
26 | use crate::economy::money::{MicroCoin, MICRO_PER_COIN};
   |                             ^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `Sha256`
  --> src/runtime/agent_keypairs.rs:31:20
   |
31 | use sha2::{Digest, Sha256};
   |                    ^^^^^^

warning: unused import: `CapsulePrivacyPolicy`
  --> src/runtime/audit_assertions.rs:83:30
   |
83 | use crate::state::typed_tx::{CapsulePrivacyPolicy, TypedTx};
   |                              ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::BTreeMap`
  --> src/runtime/audit_views.rs:27:5
   |
27 | use std::collections::BTreeMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::state::price_index::RationalPrice`
  --> src/runtime/audit_views.rs:32:5
   |
32 | use crate::state::price_index::RationalPrice;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `LpShareAmount` and `ShareSidePair`
  --> src/runtime/audit_views.rs:33:53
   |
33 | use crate::state::q_state::{AgentId, EconomicState, LpShareAmount, PoolStatus, ShareSidePair};
   |                                                     ^^^^^^^^^^^^^              ^^^^^^^^^^^^^

warning: unused import: `ShareAmount`
  --> src/runtime/audit_views.rs:35:67
   |
35 | use crate::state::typed_tx::{EventId, PositionKind, PositionSide, ShareAmount};
   |                                                                   ^^^^^^^^^^^

warning: unused import: `Deserialize`
 --> src/sdk/tools/librarian.rs:6:13
  |
6 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^

warning: unused import: `Path`
 --> src/sdk/tools/librarian.rs:9:17
  |
9 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `ToolSignal`
 --> src/sdk/tools/search.rs:4:24
  |
4 | use crate::sdk::tool::{ToolSignal, TuringTool};
  |                        ^^^^^^^^^^

warning: unused import: `std::path::Path`
 --> src/sdk/tools/search.rs:6:5
  |
6 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `TxId`
  --> src/state/sequencer.rs:41:82
   |
41 | use crate::state::q_state::{AgentId, EscrowEntry, Hash, QState, TaskMarketEntry, TxId};
   |                                                                                  ^^^^

warning: unused imports: `AgentId` and `ShareSidePair`
  --> src/state/price_index.rs:23:29
   |
23 | use crate::state::q_state::{AgentId, ChallengeStatus, EconomicState, ShareSidePair};
   |                             ^^^^^^^                                  ^^^^^^^^^^^^^

warning: unused import: `NodePosition`
  --> src/state/price_index.rs:24:39
   |
24 | use crate::state::typed_tx::{EventId, NodePosition, PositionSide, ShareAmount};
   |                                       ^^^^^^^^^^^^

warning: unused import: `Digest`
  --> src/runtime/agent_keypairs.rs:31:12
   |
31 | use sha2::{Digest, Sha256};
   |            ^^^^^^

warning: function `sign_rejected_attempt_summary` is never used
   --> src/bottom_white/ledger/system_keypair.rs:583:19
    |
583 |     pub(crate) fn sign_rejected_attempt_summary(
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `sign_system_message` is never used
   --> src/bottom_white/ledger/system_keypair.rs:594:19
    |
594 |     pub(crate) fn sign_system_message(
    |                   ^^^^^^^^^^^^^^^^^^^

warning: function `sign_epoch_rotation_proof` is never used
   --> src/bottom_white/ledger/system_keypair.rs:694:19
    |
694 |     pub(crate) fn sign_epoch_rotation_proof(
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: function `sign_system_message` is never used
   --> src/bottom_white/ledger/system_keypair.rs:705:19
    |
705 |     pub(crate) fn sign_system_message(
    |                   ^^^^^^^^^^^^^^^^^^^

warning: field `tx_id` is never read
   --> src/runtime/chain_derived_run_facts.rs:242:5
    |
241 | struct WorkTxAttempt {
    |        ------------- field in this struct
242 |     tx_id: TxId,
    |     ^^^^^
    |
    = note: `WorkTxAttempt` has derived impls for the traits `Clone` and `Debug`, but these are intentionally ignored during dead code analysis

warning: `turingosv4` (lib) generated 25 warnings (run `cargo fix --lib -p turingosv4` to apply 19 suggestions)
error[E0283]: type annotations needed
   --> tests/tb_18r_attempt_telemetry_serialize.rs:159:52
    |
153 |     let trace = MarketDecisionTrace::no_trade(
    |                 ----------------------------- required by a bound introduced by this call
...
159 |         "saw active TaskOutcomeMarket but no edge".into(),
    |                                                    ^^^^
    |
    = note: cannot satisfy `_: Into<String>`
note: required by a bound in `MarketDecisionTrace::no_trade`
   --> src/runtime/market_decision_trace.rs:232:37
    |
226 |     pub fn no_trade(
    |            -------- required by a bound in this associated function
...
232 |         reason_summary_public: impl Into<String>,
    |                                     ^^^^^^^^^^^^ required by this bound in `MarketDecisionTrace::no_trade`
help: try using a fully qualified path to specify the expected types
    |
159 -         "saw active TaskOutcomeMarket but no edge".into(),
159 +         <&str as Into<T>>::into("saw active TaskOutcomeMarket but no edge"),
    |
help: consider removing this method call, as the receiver has type `&'static str` and `&'static str: Into<String>` trivially holds
    |
159 -         "saw active TaskOutcomeMarket but no edge".into(),
159 +         "saw active TaskOutcomeMarket but no edge",
    |

error[E0283]: type annotations needed
   --> tests/tb_18r_attempt_telemetry_serialize.rs:159:52
    |
159 |         "saw active TaskOutcomeMarket but no edge".into(),
    |                                                    ^^^^
    |
    = note: multiple `impl`s satisfying `_: From<&str>` found in the following crates: `bytes`, `reqwest`:
            - impl From<&'static str> for bytes::bytes::Bytes;
            - impl From<&'static str> for reqwest::async_impl::body::Body;
    = note: required for `&str` to implement `Into<_>`
help: try using a fully qualified path to specify the expected types
    |
159 -         "saw active TaskOutcomeMarket but no edge".into(),
159 +         <&str as Into<T>>::into("saw active TaskOutcomeMarket but no edge"),
    |

For more information about this error, try `rustc --explain E0283`.
error: could not compile `turingosv4` (test "tb_18r_attempt_telemetry_serialize") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
